--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Digital Media. Creating Websites</title>
   </head>
   <body>
+      <!-- test -->
       <a href="index.html">Page 1</a><!-- This is a link to page 1--> 
       <a href="page2.html">Page 2</a><!-- This is a link to page 2-->
       <a href="page3.html">Page 3</a><!-- This is a link to page 3-->
