I have started with my inline CSS styling

--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html>
   <head>
     <title>Digital Media. Creating Websites</title>
+    <style>
+      body{
+        background-color:bisque;
+        font-family: sans-serif;
+        
+      }
+      h1,h2 {
+        font-family: serif;
+        color: #5e61c3;
+      }
+      .center{
+        text-align: center;
+      }
+      P{
+        
+      }
+    </style>
   </head>
   <body>
-      <a href="index.html">Page 1</a><!-- This is a link to page 1--> 
-      <a href="page2.html">Page 2</a><!-- This is a link to page 2-->
-      <a href="page3.html">Page 3</a><!-- This is a link to page 3-->
+      <p><a href="index.html">Page 1</a></p><!-- This is a link to page 1--> 
+      <p><a href="page2.html">Page 2</a></p><!-- This is a link to page 2-->
+      <p><a href="page3.html">Page 3</a></p><!-- This is a link to page 3-->
       <h1>Welcome</h1><!-- This is a main heading-->
 
     <p>Welcome to this web site demonstration. This site will be used to demonstrate how 
@@ -19,7 +36,11 @@
     <p>According to<a href="https://en.wikipedia.org/wiki/Digital_media" target="_blank">Wikipedia</a>  digital media are any media that can be 
         created, viewed, changed, stored and shared on digital devices. 
         Digital media is typically accessed using an App or website.</p>
-    <h2>So what is media?</h2> <!-- This is a sub heading--> 
+    <figure>
+      <img src="/images/DigitalMedia.jfif"height="400">
+      <figcaption>Image © Malta Information Technology Agency.</figcaption>
+    </figure>
+     <h2>So what is media?</h2> <!-- This is a sub heading--> 
     <p>Media includes a lot of things but are usually images, text, audio, video and databases. 
         When combined together this means media includes animations, movies, 
         web series, TV, radio, games, books, podcasts, news articles, websites,
@@ -36,6 +57,8 @@
 
     <p>A web page is what you are viewing right now. A single digital media page designed 
         to be viewed in an app called a web browser.</p>
+  <!--this will eventually become a footer -->
+    <p class="center">&copy;2024 YourName.</p>
   </body>
-  <html>
+<html>
 
