--- a/page2.html
+++ b/page2.html
@@ -4,12 +4,21 @@
     <title>Digital Media. Creating Websites</title>
   </head>
 <body>
-<a href="index.html">Page 1</a><!-- This is a link to page 1-->
-<a href="page2.html">Page 2</a><!-- This is a link to page 2-->
-<a href="page3.html">Page 3</a><!-- This is a link to page 3-->
+  <p><a href="index.html">Page 1</a></p><!-- This is a link to page 1--> 
+  <p><a href="page2.html">Page 2</a></p><!-- This is a link to page 2-->
+  <p><a href="page3.html">Page 3</a></p><!-- This is a link to page 3-->
 
 <h1>Structure and presentation</h1> <!-- This is a main heading--> 
-<p>Because web sites are viewed and shared on many different devices you 
+<figure>
+   <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"> 
+     <img src="images/html5_logo.png" width="150">
+     </a>
+     <img src="images/css3_logo.png" width="150">
+<figcaption>The HTML5 and CSS3 Logos.</figcaption>
+</figure>
+  
+  
+  <p>Because web sites are viewed and shared on many different devices you 
     can't just create a page that looks great on a desktop computer screen
      and expect it to also look great on your mobile device.</p>
 
@@ -24,5 +33,10 @@
 <p>Hypertext Markup Language (HTML) and Cascading Style Sheets (CSS) are two common tools used two create and present digital media. In the same way that English, Māori and Sign language are the official languages of New Zealand that are used to create traditional media, HTML and CSS are two of the official languages of the Internet used to create web pages and many Apps.</p>
 <p>HTML describes the structure and meaning of your media. It says, "this part is a heading" or "this part is a paragraph" or "this part is a navigation block". CSS is used for the presentation. It tells your device how to display the media and can tell different devices to display the same media differently.</p>
 <p>For example, take a look at the LearnCoach web site as it appears on a mobile devices and on a desktop web browser. The information is the same, but using CSS, the presentation is different.</p>
-  </body>
+ <Figure>
+   <img src="images/learncoach_desktop.png"height="400">
+   <img src="images/learncoach_mobile.png"height="400">
+ </Figure>
+</body>
 </html>
+
