--- a/page3.html
+++ b/page3.html
@@ -4,12 +4,15 @@
     <title>Digital Media. Creating Websites</title>
   </head>
 <body>
-<a href="index.html">Page 1</a><!-- This is a link to page 1-->
-<a href="page2.html">Page 2</a><!-- This is a link to page 2-->
-<a href="page3.html">Page 3</a><!-- This is a link to page 3-->
+  <p><a href="index.html">Page 1</a></p><!-- This is a link to page 1--> 
+  <p><a href="page2.html">Page 2</a></p><!-- This is a link to page 2-->
+  <p><a href="page3.html">Page 3</a></p><!-- This is a link to page 3-->
 
 <h1>Interactivity</h1> <!-- This is a main heading--> 
 <p>One of the best bits of digital media is, instead of passively watching, reading or listening, the page can respond to your actions. Moving, scrolling and zooming elements around the page, entering and editing data, picking preferences and more can all be done with interactive digital media.</p>
+  <figure>
+    <img src="images/interact.png"height="150">
+  </figure>
 <p>Simple interactivity can be done with the Cascading Style Sheet (CSS) language used on web sites. A simple example is the mouse over highlights of the links in the nav bar above, but for more complex interactions you will need to learn a programming language.</p>
 <p>There are a lot of programming languages out there, each with their own strengths and weaknesses. When building web pages, there are two common languages used: JavaScript and PHP.</p>
 
