I have made my navigation bar automatically line up it self and I have added the hover element

--- a/index.html
+++ b/index.html
@@ -2,31 +2,19 @@
 <html>
   <head>
     <title>Digital Media. Creating Websites</title>
-    <style>
-      body{
-        background-color:bisque;
-        font-family: sans-serif;
-        
-      }
-      h1,h2 {
-        font-family: serif;
-        color: #5e61c3;
-      }
-      .center{
-        text-align: center;
-      }
-      P{
-        
-      }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-      <p><a href="index.html">Page 1</a></p><!-- This is a link to page 1--> 
-      <p><a href="page2.html">Page 2</a></p><!-- This is a link to page 2-->
-      <p><a href="page3.html">Page 3</a></p><!-- This is a link to page 3-->
-      <h1>Welcome</h1><!-- This is a main heading-->
-
-    <p>Welcome to this web site demonstration. This site will be used to demonstrate how 
+    <nav>
+      <!--Site Wide Navigation bar-->
+      <p><a href="index.html">Home</a></p><!-- This is a link to page 1--> 
+      <p><a href="page2.html">Structure and Presentation</a></p><!-- This is a link to page 2-->
+      <p><a href="page3.html">Interactivity</a></p><!-- This is a link to page 3-->
+       </nav>
+  
+    <h1>Welcome</h1><!-- This is a main heading-->
+   
+  <p>Welcome to this web site demonstration. This site will be used to demonstrate how 
     to look behind the scenes on an existing web site to see how it is built and will 
     serve as an example for a site you will create.</p>
 
@@ -36,7 +24,7 @@
     <p>According to<a href="https://en.wikipedia.org/wiki/Digital_media" target="_blank">Wikipedia</a>  digital media are any media that can be 
         created, viewed, changed, stored and shared on digital devices. 
         Digital media is typically accessed using an App or website.</p>
-    <figure>
+    <figure class="center">
       <img src="/images/DigitalMedia.jfif"height="400">
       <figcaption>Image © Malta Information Technology Agency.</figcaption>
     </figure>
