--- a/page3.html
+++ b/page3.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>Digital Media. Creating Websites</title>
+     <link rel="stylesheet" href="css/main.css">
   </head>
 <body>
-  <p><a href="index.html">Page 1</a></p><!-- This is a link to page 1--> 
-  <p><a href="page2.html">Page 2</a></p><!-- This is a link to page 2-->
-  <p><a href="page3.html">Page 3</a></p><!-- This is a link to page 3-->
+  <nav>
+  <!--Site Wide Navigation bar-->
+  <p><a href="index.html">Home</a></p><!-- This is a link to page 1--> 
+  <p><a href="page2.html">Structure and Presentation</a></p><!-- This is a link to page 2-->
+  <p><a href="page3.html">Interactivity</a></p><!-- This is a link to page 3-->
+   </nav>
 
 <h1>Interactivity</h1> <!-- This is a main heading--> 
 <p>One of the best bits of digital media is, instead of passively watching, reading or listening, the page can respond to your actions. Moving, scrolling and zooming elements around the page, entering and editing data, picking preferences and more can all be done with interactive digital media.</p>
